feat : 메뉴 생성 로직 수정